<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">mobileKKM</string>
    <string name="app_description">Unofficial Android app for the mobile KKM ticketing webapp.</string>

    <!-- Splash activity -->
    <string name="splash_logo">mobileKKM logo</string>
    <string name="splash_footer">Background footer</string>

    <!-- Webview related strings -->
    <string name="action_clear_cache">Clear cache</string>
    <string name="action_help">Help</string>
    <string name="action_about">About app</string>
    <string name="intent_chooser_file">Select file</string>
    <string name="error_no_network">No Internet connection</string>
    <string name="snackbar_retry">Try again</string>
    <string name="press_back_again">Press \"back\" again to exit</string>
    <string name="fab_brightness">Brighten up the display</string>
    <string name="fab_prompt_title">Brighten up the display</string>
    <string name="fab_prompt_message">Tap the lightbulb to brighten up the display during ticket control</string>
    <string name="loading_problem">Problem loading the page?</string>

    <!-- Facebook dialog -->
    <string name="dialog_facebook_title">Facebook</string>
    <string name="dialog_facebook_message">Like our Facebook page to get the latest updates on app development.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- Payment related strings -->
    <string name="no_browser_activity">No browser app found</string>
    <string name="no_payment">This payment cannot be recognized</string>
    <string name="payment_complete">Payment has been completed</string>
    <string name="payment_error">Payment failed or was cancelled</string>

    <!-- Update notifications -->
    <string name="update_notification_channel">App updates</string>
    <string name="update_notification_title">User action required</string>
    <string name="update_notification_message">From 31.01. the new version of mKKM system no longer works with the old version of the app, you need to log in again and pair the ticket with the new system.</string>

    <!-- Attribouter screen -->
    <string name="about_contact_us">Contact us</string>
    <string name="about_facebook_like">Like us</string>
    <string name="attribouter_title_about">About app</string>
    <string name="attribouter_title_licenses">Open Source Licenses</string>
    <string name="attribouter_title_email">Email</string>
    <string name="attribouter_title_website">Website</string>
    <string name="attribouter_title_git">Repository</string>
    <string name="attribouter_title_version">Version %1$s</string>
    <string name="attribouter_title_contributors">Contributors</string>
    <string name="attribouter_title_translators">Translators</string>
    <string name="attribouter_title_license">License</string>
    <string name="attribouter_title_license_permissions">Permissions</string>
    <string name="attribouter_title_license_conditions">Conditions</string>
    <string name="attribouter_title_license_limitations">Limitations</string>
    <string name="attribouter_title_more_info">More Info</string>
    <string name="attribouter_desc_licenses_legal">This is not legal advice. The above information is intended solely to inform the user of general information about open source licenses. Open source licenses allow software to be freely used, modified, and shared. However, they do not come without exceptions. Please be aware of the restrictions of the licenses that you are using before publishing your software.</string>
    <string name="about_role_lead">Lead Developer</string>
    <string name="about_role_proofreader">Translation Proofreader</string>
    <string name="about_role_ui_designer">UI Designer</string>
    <string name="about_role_icon_designer">Icon Designer</string>
    <string name="about_role_copyright">All Rights Reserved</string>
    <string name="about_bio_divadsn">21 years old, turns caffeine and pizza into code. Also previously known as Codebucket.</string>
    <string name="about_bio_imintie">Second half of David Sn.</string>
    <string name="about_bio_lumiqcreative">It’s just got harder to build a bad product.</string>
</resources>
