<?xml version="1.0" encoding="utf-8"?>
<about>
    <AppWedge
        icon="@mipmap/ic_launcher"
        title="@string/app_name"
        description="@string/app_description"
        playStoreUrl="https://play.google.com/store/apps/details?id=de.codebucket.mkkm"
        websiteUrl="https://mobilekkm.codebucket.de">

        <LinkWedge
            name="@string/about_facebook_like"
            icon="@drawable/ic_facebook_box"
            url="https://facebook.com/getmobilekkm" />

        <LinkWedge
            name="@string/about_contact_us"
            icon="@drawable/ic_messenger"
            url="https://m.me/getmobilekkm" />

    </AppWedge>

    <ContributorsWedge
        showDefaults="false">

        <!-- Lead developer: divadsn -->
        <ContributorWedge
            login="divadsn"
            name="^David Sn"
            avatar="https://avatars.githubusercontent.com/u/28547847"
            task="@string/about_role_lead"
            bio="^@string/about_bio_divadsn"
            websiteUrl="https://www.codebucket.de" />

        <!-- Proofreader: imintie -->
        <ContributorWedge
            login="imintie"
            name="^Aga Jaszowska"
            avatar="https://avatars1.githubusercontent.com/u/43252015"
            task="@string/about_role_proofreader"
            bio="^@string/about_bio_imintie"
            websiteUrl="https://imintie.github.io" />

        <!-- UI Designer: lumiqcreative -->
        <ContributorWedge
            login="lumiqcreative"
            name="^Lumiq Creative"
            avatar="https://avatars.githubusercontent.com/u/30959743"
            task="@string/about_role_ui_designer"
            bio="^@string/about_bio_lumiqcreative"
            websiteUrl="https://lumiqcreative.com" />

        <!-- Icon Designer: Radek Bledowski -->
        <ContributorWedge
            name="^Radek Bledowski"
            avatar="https://avatars.githubusercontent.com/u/22264125"
            task="@string/about_role_icon_designer" />

        <!-- Copyright: MPK Kraków -->
        <ContributorWedge
            name="^MPK S.A. w Krakowie"
            avatar="https://www.codebucket.de/mobilekkm/logo_kolor_CMYK.jpg"
            task="@string/about_role_copyright" />

    </ContributorsWedge>

    <LicensesWedge
        overflow="5"
        showDefaults="true">

        <!-- AndroidX Support Libraries -->
        <LicenseWedge
            title="^AndroidX"
            repo="android/android-ktx"
            license="apache-2.0" />

        <!-- Material Design Components -->
        <LicenseWedge
            title="^Material Components for Android"
            repo="material-components/material-components-android"
            license="apache-2.0" />

    </LicensesWedge>
</about>
